--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_sign_in: ^6.1.4
   font_awesome_flutter: ^10.5.0
   google_fonts: ^5.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
