--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   google_fonts: ^5.1.0
   provider: ^6.0.5
+  audioplayers: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,8 @@ flutter:
   assets:
     - image.png
     - BackgroundMatthie.png
+    - bg_music.mp3 ##Musica De background
+    - soundeffect_music.mp3 ##Musica De efeito sonoro
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
