--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ flutter:
     - image.png
     - BackgroundMatthie.png
     - music.wav
-    - success.wav
+    - success.mp3
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
