--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ flutter:
     - BackgroundMatthie.png
     - music.wav
     - success.mp3
+    - assets/
+    - matthie_logo.png
+    - matthie_home.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
